examples/test/testpolicy10946.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10946
  namespace: namespace146
spec:
  podSelector:
    matchLabels:
      key35: value38
      key43: value34
      key0: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value1
          key11: value49
      podSelector:
        matchLabels:
          key28: value8
          key7: value5
          key4: value28
